--- a/calendar/app/views/calendars/_about.html.erb
+++ b/calendar/app/views/calendars/_about.html.erb
@@ -4,7 +4,7 @@
       <a aria-hidden="true" href="#about" class="anchor" id="user-content-about"></a>ABOUT</h1>
     <p dir="auto" data-sourcepos="2:1-2:141">Here are some important points about the project:</p>
     <ul dir="auto" data-sourcepos="3:1-8:105">
-      <li data-sourcepos="3:1-3:76">the project code is available in <a target="_blank" href="https://github.com/viniciusgb4/rails-calendar">github</a>;</li>
+      <li data-sourcepos="3:1-3:76">the project code is available on <a target="_blank" href="https://github.com/viniciusgb4/rails-calendar">github</a>;</li>
       <li data-sourcepos="3:1-3:76">the project was made in Rails 7 with Bootstrap 5 to help in the frontend;</li>
       <li data-sourcepos="4:1-4:58">the user access control was implemented with Devise gem;</li>
       <li data-sourcepos="5:1-5:90">the calendar are automatically updated with new reminders. For that, I used ActionCable;</li>
